security config updated, several url's transferred from monolith